# ai-human-in-the-loop

./: README.md  commands-used.txt  main.py  pyproject.toml  requirements.txt  sample env file.env  sample_env_file.env
api/: health_check_routes.py  router.py
core/: azure_ad_auth.py  dependencies.py  dependency_agent_chat_history.py  error_handlers.py  error_types.py  utils.py
core/guardrails/: guard_rail_models.py  guard_rail_service.py  llm_guard_rail_service.py
core/models/: azurechatopenai.py  model_exception.py
genai_core/agent/: agent_base.py  agents_prompts.py  audit_context.py  chat_service.py  check_pointer.py  mcp_client_utils.py  model_base.py  parser_utils.py  prompt_manager.py  react_agent.py  react_orchestrator.py  shared_agent_state.py  tool_executor_custom.py
genai_core/agent/exceptions/: agent_exception.py
genai_core/agent/genai_lens_langsmith/: langsmith_lens.py
genai_core/agent/utils/: agent_utils.py  utils.py
genai_core/cache/: agent_cache.py  agent_cache_prompts.py  chat_history.py  mongodb_checkpointer.py  redis_checkpointer.py
genai_core/chat_history/: chat_history.py  chat_history_base.py  mongodb_chat_history.py
genai_core/logs/: agent_logging.py  conversational_logger.py
genai_core/mongodb/repo/: conversation_document_repo.py
genai_core/rag/: script_to_embed.py
genai_core/rag/common/: common_utlities.py  vector_store.py
genai_core/rag/embedding/: embedding_generator.py  rag_vector_search.py
genai_core/rag/models/: data_models.py  prompts.py
genai_core/rag/tools/: document_search_tool.py
genai_core/tools/: tool_result.py
models/: conversation.py  conversationinfo.py  feedback_models.py  outputresponsemodel.py  parts.py  requestresponse.py
tests/: rag_unit_test.py  test_llm_as_judge.py
