[project]
name = "ai-human-in-the-loop"
version = "0.1.0"
description = "HITL Example"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "colorama==0.4.6",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "greenlet==3.5.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.16",
    "jiter==0.15.0",
    "jsonpatch==1.33",
    "jsonpath-ng==1.8.0",
    "jsonpointer==3.1.1",
    "langchain==1.3.1",
    "langchain-classic==1.0.7",
    "langchain-core==1.4.0",
    "langchain-mongodb==0.11.0",
    "langchain-openai==1.2.2",
    "langchain-protocol==0.0.15",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.1",
    "langgraph-checkpoint==4.1.1",
    "langgraph-checkpoint-mongodb==0.4.0",
    "langgraph-checkpoint-redis==0.4.1",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.3.15",
    "langsmith==0.8.5",
    "lark==1.3.1",
    "ml-dtypes==0.5.4",
    "numpy==2.4.6",
    "openai==2.38.0",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pymongo==4.16.0",
    "pymongo-search-utils==0.3.0",
    "python-dotenv==1.2.2",
    "python-ulid==3.1.0",
    "pyyaml==6.0.3",
    "redis==7.4.0",
    "redisvl==0.18.2",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.50",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.16.0",
    "websockets==16.0",
    "xxhash==3.7.0",
    "zstandard==0.25.0",
]
