[project]
name = "ai-human-in-the-loop"
version = "0.1.0"
description = "HITL Example"
readme = "README.md"
requires-python = ">=3.14"

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "test_llm_as_judge.py"]
testpaths = ["tests"]


